tests/baselines/reference/invalidForBreakStatements.errors.txt
tests/cases/conformance/statements/breakStatements/invalidForBreakStatements.ts(5,1): error TS1105: A 'break' statement can only be used within an enclosing iteration or switch statement.
tests/cases/conformance/statements/breakStatements/invalidForBreakStatements.ts(9,9): error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
tests/cases/conformance/statements/breakStatements/invalidForBreakStatements.ts(15,9): error TS1107: Jump target cannot cross function boundary.
tests/cases/conformance/statements/breakStatements/invalidForBreakStatements.ts(22,9): error TS1107: Jump target cannot cross function boundary.
tests/cases/conformance/statements/breakStatements/invalidForBreakStatements.ts(28,5): error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
tests/cases/conformance/statements/breakStatements/invalidForBreakStatements.ts(37,5): error TS1116: A 'break' statement can only jump to a label of an enclosing statement.


==== tests/cases/conformance/statements/breakStatements/invalidForBreakStatements.ts (6 errors) ====
    
    // All errors
    
    // naked break not allowed
    break;
    ~~~~~~
!!! error TS1105: A 'break' statement can only be used within an enclosing iteration or switch statement.
    
    // non-existent label
    ONE:
    for(;;) break TWO;
            ~~~~~~~~~~
!!! error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
    
    // break from inside function
    TWO:
    for(;;) {
        var x = () => {
            break TWO;
            ~~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
        }
    }
    
    THREE:
    for(;;) {
        var fn = function () {
            break THREE;
            ~~~~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
        }
    }
    
    // break forward
    for(;;) {
        break FIVE;
        ~~~~~~~~~~~
!!! error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
        FIVE:
        for (; ;) { }
    }
    // label on non-loop statement
    NINE:
    var y = 12;
    
    for(;;) {
        break NINE;
        ~~~~~~~~~~~
!!! error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
    }